Add python and use .env vars

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 OPENAI_API_KEY=sk-...
+CHROMA_PATH=./chroma_db
+COLLECTION_NAME=quiz_knowledge
+QUESTIONS_PER_PAGE=10
+N_ANN=4
+MODEL=gpt-4.1
+SYSTEM_PROMPT="You are an expert in X. Answer based on the provided examples."
+EMBEDDING_MODEL=text-embedding-3-small
